--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.css.map
-.css
+*.css.map
+*.css
 
 npm-debug.log*
 yarn-debug.log*
